# youtube-multimodal-ingestion

./: .gitignore  LICENSE  README.md  batch_comments_ingest.py  comments_ingest.py  dQw4w9WgXcQ.jsonl  pyproject.toml  youtube_ingest.py
whisper_transcriber/: .gitignore  README.md
whisper_transcriber/whisper_transcriber/: cli.py
youtube_scraper/: README.md
youtube_scraper/youtube_scraper/: __init__.py  cli.py  models.py
youtube_scraper/youtube_scraper/filters/: timeframe.py
youtube_scraper/youtube_scraper/scraper/: comment_scraper.py  video_scraper.py  yt_dlp_client.py
youtube_scraper/youtube_scraper/storage/: jsonl_writer.py
